feat!: Introduce identity API to Pylon Client
Pylon client can now query both open access and identity APIs.
Pylon client tests were refactored to reduce boiler plate and use
reverse url names.
Fixed settings import in pylon client.

BREAKING CHANGE: Pylon client interface changed significantly: now
methods are used instead of passing PylonRequest object directly.
Impacts: client
Issue: BACT-169

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,5 +110,6 @@ documentation = "https://github.com/backend-developers-ltd/bittensor-pylon#readm
 path = "pylon/__init__.py"
 
 [tool.hatch.build.targets.wheel]
-packages = ["pylon._internal", "pylon.v1"]
+include = ["pylon/"]
+exclude = ["pylon/service/"]
 
