--- a/.github/workflows/cd-docker.yml
+++ b/.github/workflows/cd-docker.yml
@@ -2,20 +2,33 @@ name: CD Docker
 
 on:
   push:
-    branches:
-      - 'push-docker'
+    tags:
+      - 'service-v*'
 
 env:
-  TAG_VERSION: "v1-latest"
   DOCKER_REPO_NAME: "backenddevelopersltd/bittensor-pylon"
 
 permissions:
   contents: read
 
 jobs:
+  validate-version:
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.validate.outputs.version }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Validate version
+        id: validate
+        uses: ./.github/actions/validate-version
+        with:
+          tag-prefix: 'service-v'
+          version-file: 'pylon/service/__init__.py'
+
   docker-push:
     runs-on: ubuntu-latest
-
+    needs: validate-version
     steps:
       - uses: actions/checkout@v4
 
@@ -34,5 +47,7 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ env.DOCKER_REPO_NAME }}:${{ env.TAG_VERSION }}
-            ${{ env.DOCKER_REPO_NAME }}:git-${{ github.sha }}
+            ${{ env.DOCKER_REPO_NAME }}:${{ needs.validate-version.outputs.version }}
+            ${{ env.DOCKER_REPO_NAME }}:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
