--- a/.github/workflows/cd-pypi.yml
+++ b/.github/workflows/cd-pypi.yml
@@ -3,22 +3,31 @@ name: CD PyPI
 on:
   push:
     tags:
-      - 'v*'  # Trigger on version tags like v1.0.0
-    branches:
-      - master
-      - main
+      - 'client-v*'
 
 permissions:
   contents: read
 
 jobs:
-  release-build:
+  validate-version:
     runs-on: ubuntu-latest
-
+    outputs:
+      version: ${{ steps.validate.outputs.version }}
     steps:
       - uses: actions/checkout@v4
+
+      - name: Validate version
+        id: validate
+        uses: ./.github/actions/validate-version
         with:
-          fetch-depth: 0
+          tag-prefix: 'client-v'
+          version-file: 'pylon/__init__.py'
+
+  release-build:
+    runs-on: ubuntu-latest
+    needs: validate-version
+    steps:
+      - uses: actions/checkout@v4
 
       - uses: astral-sh/setup-uv@v6
 
@@ -33,10 +42,9 @@ jobs:
 
   pypi-publish:
     runs-on: ubuntu-latest
-    needs: release-build
+    needs: [validate-version, release-build]
     permissions:
       id-token: write
-
     steps:
       - name: Retrieve release distributions
         uses: actions/download-artifact@v4
