--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,9 @@ name: CI
 on:
   push:
     branches: [master, main]
+    tags:
+      - 'client-v*'
+      - 'service-v*'
   pull_request:
 
 env:
@@ -34,18 +37,6 @@ jobs:
         uses: ./.github/actions/setup-python-env
         with:
           python-version: '3.12'
-
-      - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y libsqlite3-dev
-
-      - name: Docker build
-        run: |
-          IMAGE_NAME="${DOCKER_REPO_NAME}:${TAG_VERSION}"
-          SHA_IMAGE_NAME="${DOCKER_REPO_NAME}:git-${GITHUB_SHA}"
-
-          docker build -t "${IMAGE_NAME}" -f Dockerfile .
-
-          docker image tag "${IMAGE_NAME}" "${SHA_IMAGE_NAME}"
 
       - name: Create dotenv file
         run: cp ./pylon/service/envs/test_env.template .env
