feat: Add proactive caching for recent neurons
Adds recent neurons endpoint that returns neurons cached previously by the background task. The task refreshes the cache periodically.

Impacts: service
Issue: BACT-127

--- a/pylon_client/service/envs/test_env.template
+++ b/pylon_client/service/envs/test_env.template
@@ -25,3 +25,20 @@ PYLON_SENTRY_ENVIRONMENT=development
 # Token for accessing /metrics endpoint. Must be passed as Bearer token in Authorization header.
 # If empty, /metrics endpoint will return 403 Forbidden.
 PYLON_METRICS_TOKEN=
+
+# Settings for proactive caching of recent objects.
+
+# Soft and hard limits is the time in block unit (1 block = 12 seconds) for which data is considered fresh.
+# If data is older than soft limit, it will still be returned, but with warning that it is stale.
+# If data is older than hard limit, it will be considered stale and not returned.
+# The default value for soft limit is 100 blocks, and hard limit is 150 blocks.
+PYLON_RECENT_OBJECTS_SOFT_LIMIT_BLOCKS=
+PYLON_RECENT_OBJECTS_HARD_LIMIT_BLOCKS=
+
+# Number of blocks before soft limit to start updating the cache. Default value is 10
+# Example, if soft limit is 100 and lead blocks is 5, cache will be updated after 95 blocks.
+PYLON_RECENT_OBJECTS_REFRESH_LEAD_BLOCKS=
+
+# List of subnets for which recent objects should be cached. Recent objects will be cached for these subnets, plus
+# any other subnets identities are configured for.
+PYLON_RECENT_OBJECTS_NETUIDS=
