feat: Add get extrinsic endpoint
New endpoint to fetch the extrinsic from specific
index from a block.

Impacts: service, client

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,9 @@ extend-immutable-calls = [
     "pylon_client._internal.common.types.Consensus",
     "pylon_client._internal.common.types.Dividends",
     "pylon_client._internal.common.types.Emission",
+    "pylon_client._internal.common.types.ExtrinsicHash",
+    "pylon_client._internal.common.types.ExtrinsicIndex",
+    "pylon_client._internal.common.types.ExtrinsicLength",
     "pylon_client._internal.common.types.Hotkey",
     "pylon_client._internal.common.types.Incentive",
     "pylon_client._internal.common.types.MaxWeightsLimit",
