build: Upgrade versioning and release flow
Now the version of application is fetched from the git tag instead of
__init__.py file.

Impacts: client, service
Issue: BACT-244

--- a/pylon_client/pyproject.toml
+++ b/pylon_client/pyproject.toml
@@ -29,11 +29,14 @@ homepage = "https://github.com/backend-developers-ltd/bittensor-pylon"
 repository = "https://github.com/backend-developers-ltd/bittensor-pylon"
 
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
 
 [tool.hatch.version]
-path = "pylon_client/__init__.py"
+source = "vcs"
+tag-pattern = "^client-v(?P<version>.*)$"
+fallback-version = "0.0.0"
+raw-options.root = ".."
 
 [tool.hatch.build]
 packages = ["pylon_client"]
