--- a/.github/workflows/cd-docker.yml
+++ b/.github/workflows/cd-docker.yml
@@ -12,25 +12,17 @@ permissions:
   contents: read
 
 jobs:
-  validate-version:
-    runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.validate.outputs.version }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Validate version
-        id: validate
-        uses: ./.github/actions/validate-version
-        with:
-          tag-prefix: 'service-v'
-          version-file: 'pylon_service/pylon_service/__init__.py'
-
   docker-push:
     runs-on: ubuntu-latest
-    needs: validate-version
     steps:
       - uses: actions/checkout@v4
+
+      - name: Extract version from tag
+        id: version
+        run: |
+          TAG="${GITHUB_REF#refs/tags/}"
+          VERSION="${TAG#service-v}"
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -48,7 +40,7 @@ jobs:
           file: pylon_service/Dockerfile
           push: true
           tags: |
-            ${{ env.DOCKER_REPO_NAME }}:${{ needs.validate-version.outputs.version }}
+            ${{ env.DOCKER_REPO_NAME }}:${{ steps.version.outputs.VERSION }}
             ${{ env.DOCKER_REPO_NAME }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
