--- a/.github/workflows/cd-pypi-client.yml
+++ b/.github/workflows/cd-pypi-client.yml
@@ -9,25 +9,12 @@ permissions:
   contents: read
 
 jobs:
-  validate-version:
-    runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.validate.outputs.version }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Validate version
-        id: validate
-        uses: ./.github/actions/validate-version
-        with:
-          tag-prefix: 'client-v'
-          version-file: 'pylon_client/pylon_client/__init__.py'
-
   release-build:
     runs-on: ubuntu-latest
-    needs: validate-version
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-tags: true
 
       - uses: astral-sh/setup-uv@v6
 
@@ -42,7 +29,7 @@ jobs:
 
   pypi-publish:
     runs-on: ubuntu-latest
-    needs: [validate-version, release-build]
+    needs: release-build
     permissions:
       id-token: write
     steps:
