--- a/pylon_service/pyproject.toml
+++ b/pylon_service/pyproject.toml
@@ -31,11 +31,14 @@ homepage = "https://github.com/backend-developers-ltd/bittensor-pylon"
 repository = "https://github.com/backend-developers-ltd/bittensor-pylon"
 
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
 
 [tool.hatch.version]
-path = "pylon_service/__init__.py"
+source = "vcs"
+tag-pattern = "^service-v(?P<version>.*)$"
+fallback-version = "0.0.0"
+raw-options.root = ".."
 
 [tool.hatch.build.targets.wheel]
 packages = ["pylon_service"]
